# HonkHonk

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  SECURITY.md  clippy.toml  deny.toml  renovate.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: appimage.yml  aur.yml  codeql.yml  deb.yml  flatpak-cargo-sources.yml  flatpak.yml  icons.yml  release.yml  rust-clippy.yml  rust.yml
assets/icons/: Makefile  README.md
benches/: grid_render.rs
benches/support/: mod.rs
docs/adr/: 004-persistent-source-conf-d.md  006-fundsp-over-rubberband-soundtouch.md  007-links-only-routing-over-pw-filter.md  008-subprocess-fallback-for-shortcut-config-ui.md  009-canvas-sticker-tiles-rejected.md  010-polyphonic-playback-voice-pool.md
docs/benchmarks/: grid-render-baseline.md
docs/design-reference/: HonkHonk.html  honkhonk-context.jsx  honkhonk-direction-c.jsx  honkhonk-editor.jsx  honkhonk-empty.jsx  honkhonk-handoff.jsx  honkhonk-import.jsx  honkhonk-portal.jsx  honkhonk-settings.jsx  honkhonk-shared.jsx  honkhonk-slots.jsx  honkhonk-tray.jsx
docs/design-reference/src-rust/ui/: mod.rs  (+2 more)
docs/superpowers/plans/: 2026-05-03-pr1-iced-window-tray.md  2026-05-03-symphonia-decode-to-pcm.md  2026-05-04-pipewire-virtual-sink.md  2026-05-04-playback-to-sink-and-monitor.md  2026-05-05-fix-audio-pipeline-routing.md  2026-05-05-fix-volume-not-applied-to-new-playback.md  2026-05-05-search-volume-nowplaying.md  2026-05-05-sound-grid-click-to-play.md  2026-05-06-global-shortcuts.md  2026-05-07-slot-manager.md  2026-05-08-xdg-portal-identity-shortcut-readback.md  2026-05-09-duration-scanning.md  2026-05-09-settings-panel.md  2026-05-13-mic-passthrough-toggle.md  2026-05-13-renderer-selection.md  2026-05-15-in-app-shortcut-assignment.md  2026-05-15-shortcut-rebind-fix.md  2026-05-16-search-focus-bug.md  2026-05-16-shortcut-config-service.md  2026-05-16-volume-slider-shortcut-persistence.md  2026-05-17-issue-47-icon-pipeline.md  2026-05-17-issue-84-aur-honkhonk-bin.md  2026-06-03-aur-source-package.md  2026-06-03-issue-49-persistent-virtual-source.md  2026-06-04-issue-27-pipewire-router.md  2026-06-04-issue-30-effect-chain-plumbing.md  2026-06-09-ringmod-bandpass-effects.md  2026-06-22-about-license-string.md  2026-06-22-effects-panel-preset-selector.md  2026-06-22-issue-130-grid-render-bench.md  2026-06-22-issue-131-persistent-canvas-cache.md  2026-06-22-issue-35-formant-pitch.md  2026-06-22-waveform-playhead.md  2026-06-23-async-decode-pcm-cache.md  2026-06-23-effects-side-panel.md  2026-06-24-structured-logging.md  2026-06-26-panel-feather-edge-emitter-snippets.md  2026-06-26-panel-feather-edge-emitter.md  2026-06-27-panel-feather-motion.md  2026-06-29-grid-responsive-layout-regression.md
docs/superpowers/specs/: 2026-05-03-phase1-mvp-design.md  2026-05-05-search-volume-nowplaying-design.md  2026-05-06-global-shortcuts-design.md  2026-05-07-slot-manager-design.md  2026-05-08-xdg-portal-identity-shortcut-readback-design.md  2026-05-09-duration-scanning-design.md  2026-05-09-settings-panel-design.md  2026-05-12-mic-passthrough-toggle-design.md  2026-05-13-renderer-selection-design.md  2026-05-15-in-app-shortcut-assignment-design.md  2026-05-15-shortcut-rebind-fix-design.md  2026-05-16-config-ui-shortcut-service-design.md  2026-05-16-search-focus-bug-design.md  2026-05-16-volume-slider-shortcut-persistence-design.md  2026-05-17-issue-13-sticker-tiles-static-design.md  2026-05-17-issue-26-stream-watcher-design.md  2026-05-17-issue-47-icon-pipeline-design.md  2026-05-17-issue-84-aur-honkhonk-bin-design.md  2026-06-22-waveform-playhead-design.md  2026-06-23-effects-side-panel-design.md  2026-06-23-playback-decode-and-waveform-caching-design.md  2026-06-24-structured-logging-design.md  2026-06-26-panel-feather-edge-emitter-design.md  2026-06-27-panel-feather-motion-design.md
packaging/appimage/: README.md
packaging/appimage/HonkHonk.AppDir/: AppRun  honkhonk.desktop
packaging/aur/: README.md
packaging/aur/honkhonk/: .SRCINFO  PKGBUILD  README.md
packaging/aur/honkhonk-bin/: .SRCINFO  PKGBUILD
packaging/aur/honkhonk-git/: .SRCINFO  PKGBUILD
packaging/deb/: postrm
packaging/flatpak/: cargo-sources.json  io.github.thewrz.HonkHonk.metainfo.xml  io.github.thewrz.HonkHonk.yml
packaging/pipewire/: 50-honkhonk.conf
src/: app.rs  lib.rs  logging.rs  main.rs
src/app/: mod.rs  notice_tests.rs  notices.rs  panels.rs  playback.rs  recording.rs
src/app/macros/: mod.rs  scheduler.rs  tests.rs
src/app/playback/: tests.rs
src/audio/: confd.rs  decoder.rs  engine.rs  envelope.rs  error.rs  handle.rs  mixer.rs  mod.rs  playback.rs  registry.rs  router.rs  store.rs  streams.rs  voices.rs
src/audio/effects/: chain.rs  chorus.rs  commands.rs  filter.rs  flanger.rs  formant.rs  formant_dsp.rs  formant_preset.rs  layout.rs  mod.rs  modulation.rs  pitch.rs  preset.rs  reverb.rs  settings.rs
src/audio/engine/: playback_streams.rs
src/audio/voices/: tests.rs
src/settings/: mod.rs
src/shortcuts/: capture.rs  config_ui.rs  error.rs  mod.rs  portal.rs
src/state/: config.rs  error.rs  library.rs  macros.rs  mod.rs  slots.rs  sound_meta.rs
src/tray/: icon.rs  mod.rs
src/ui/: effects_panel.rs  effects_panel_view.rs  mod.rs  notice.rs  now_playing.rs  playhead.rs  search_bar.rs  settings.rs  slot_manager.rs  sound_editor.rs  sound_grid.rs  sound_tile.rs  theme.rs  tile_layout.rs  volume.rs  waveform.rs
src/ui/now_playing/: tests.rs
src/ui/side_panel/: anim.rs  flourish.rs  flourish_view.rs  geometry.rs  mod.rs  view.rs
src/ui/sound_tile/: animation.rs  effects.rs
tests/: app_test.rs  decoder_test.rs  overlap_mode_contract.rs  panel_animation_config.rs  pipewire_integration.rs  playback_test.rs  side_panel_flourish.rs  side_panel_flourish_emitter.rs  stream_watcher_integration.rs
tests/fixtures/: sine_mono.flac  sine_mono.m4a  sine_stereo.m4a
tests/flourish_support/: mod.rs
tests/packaging/: appimage_validate.sh  deb_validate.sh  flatpak_cargo_sources_fresh.sh  flatpak_validate.sh
tests/pipewire_integration/: support.rs
