[package]
name = "honkhonk"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"
description = "Wayland-native Linux soundboard"
repository = "https://github.com/thewrz/HonkHonk"

[dependencies]
iced = { version = "0.14", features = ["tokio", "tiny-skia"] }
tray-icon = "0.23"
muda = "0.19"
gtk = "0.18"
tokio = { version = "1", features = ["full"] }
symphonia = { version = "0.5", features = ["mp3", "ogg", "vorbis", "flac", "wav", "pcm", "aac"] }
thiserror = "2"
pipewire = "0.9"

[features]
default = []
pipewire-test = []

[profile.release]
lto = true
strip = true
