[package]
name = "honkhonk"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"
description = "Wayland-native Linux soundboard"
repository = "https://github.com/thewrz/HonkHonk"

[dependencies]
iced = { version = "0.14", features = ["tokio", "tiny-skia"] }
tray-icon = "0.23"
muda = "0.19"
gtk = "0.18"
tokio = { version = "1", features = ["full"] }
symphonia = { version = "0.5", features = ["mp3", "ogg", "vorbis", "flac", "wav", "pcm", "aac"] }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
directories = "6"
walkdir = "2"
pipewire = "0.9"

[features]
default = []
pipewire-test = []

[dev-dependencies]
tempfile = "3"

[package.metadata.deb]
maintainer = "thewrz <djfreaq@gmail.com>"
copyright = "2024-2026, thewrz"
license-file = ["LICENSE", "0"]
extended-description = """\
HonkHonk is a Wayland-native soundboard for Linux.
Play sounds directly into your microphone via a PipeWire virtual mic —
works with Discord, Mumble, and any PulseAudio-compatible app."""
depends = "$auto, pipewire, xdg-desktop-portal"
recommends = "xdg-desktop-portal-kde | xdg-desktop-portal-gnome | xdg-desktop-portal-wlr"
section = "sound"
priority = "optional"
assets = [
    # binary
    ["target/release/honkhonk", "usr/bin/", "755"],
    # .desktop entry
    ["assets/honkhonk.desktop", "usr/share/applications/", "644"],
    # icon
    ["assets/icons/hicolor/256x256/apps/honkhonk.png", "usr/share/icons/hicolor/256x256/apps/", "644"],
]

[profile.release]
lto = true
strip = true
