[package]
name = "honkhonk"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"
description = "Wayland-native Linux soundboard"
repository = "https://github.com/thewrz/HonkHonk"

[dependencies]
iced = { version = "0.14", features = ["tokio", "tiny-skia"] }
# Wayland-only: disable default features on BOTH tray-icon and its (also-direct)
# muda dep to drop the `libxdo` X11 keystroke path. muda only uses libxdo for the
# predefined Copy/Cut/Paste/SelectAll items, which HonkHonk does not use (our tray
# menu is custom MenuItems + separator). Both must opt out — Cargo feature
# unification means muda's default features (which include `libxdo`) win if either
# dependency edge requests them. Keep `gtk` for the SNI tray (libgtk-3 +
# libayatana-appindicator). This removes the libxdo.so / libX11 / xdotool linkage
# entirely. See issue #98.
tray-icon = { version = "0.24", default-features = false, features = ["gtk"] }
muda = { version = "0.19", default-features = false, features = ["gtk"] }
gtk = "0.18"
symphonia = { version = "0.5", features = ["mp3", "ogg", "vorbis", "flac", "wav", "pcm", "aac"] }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
directories = "6"
walkdir = "2"
pipewire = "0.9"
ashpd = { version = "0.13", features = ["global_shortcuts", "raw-window-handle", "file_chooser"] }
zbus = "5"
url = "2"  # RFC-8089 file URI parsing for pick_directory() ashpd file chooser result
lofty = "0.24"
tokio = { version = "1", features = ["rt", "macros", "sync"] }
anyhow = "1.0.102"
# Phase 4B voice effects DSP framework (ADR-006). Added in issue #30 (PR 1 of 6)
# even though no fundsp graph composition is used yet — establishes the dependency
# and allows future effect PRs to use fundsp nodes without a Cargo.toml change.
fundsp = "0.23"
# justification: phase-vocoder pitch shifting for the PitchShiftEffect (issue #31,
# PR 2 of 6). Pure-Rust, no_std crate (microfft + micromath) — no system -dev deps,
# so no CI workflow changes. fundsp has no ready-made phase-vocoder pitch shifter;
# rolling our own STFT/IFFT pipeline is out of scope for a single effect PR.
pitch_shift = "2.1.0"

[features]
default = []
pipewire-test = []

[dev-dependencies]
tempfile = "3"
# Bench harness for the sound-grid render baseline (ADR-009). Criterion is the
# de-facto Rust micro-benchmark standard; stdlib #[bench] is nightly-only.
# License: Apache-2.0 OR MIT (cargo-deny clean).
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }
# block_on for the headless wgpu device setup in the grid_render bench — avoids
# pulling a full async runtime into a bench. License: MIT OR Apache-2.0.
pollster = "0.4"
# Iced internals the grid_render bench drives directly for a headless render
# baseline (layout via UserInterface, per-renderer rasterization). All are
# already in the dependency graph at these exact versions (transitive deps of
# `iced`), so declaring them as dev-deps pulls no new crates. Pinned with `=` so
# the bench tracks whatever `iced` resolves to.
iced_runtime = "=0.14.0"
iced_wgpu = "=0.14.0"
iced_tiny_skia = "=0.14.0"
iced_core = "=0.14.0"
iced_graphics = "=0.14.0"
tiny-skia = "=0.11.4"

[[bench]]
name = "grid_render"
harness = false

[package.metadata.deb]
maintainer = "thewrz <djfreaq@gmail.com>"
copyright = "2024-2026, thewrz"
license-file = ["LICENSE", "0"]
extended-description = """\
HonkHonk is a Wayland-native soundboard for Linux.
Play sounds directly into your microphone via a PipeWire virtual mic —
works with Discord, Mumble, and any PulseAudio-compatible app."""
depends = "$auto, pipewire, xdg-desktop-portal"
recommends = "xdg-desktop-portal-kde | xdg-desktop-portal-gnome | xdg-desktop-portal-wlr"
section = "sound"
priority = "optional"
assets = [
    # binary
    ["target/release/honkhonk", "usr/bin/", "755"],
    # .desktop entry
    ["assets/honkhonk.desktop", "usr/share/applications/", "644"],
    # icon
    ["assets/icons/hicolor/256x256/apps/honkhonk.png", "usr/share/icons/hicolor/256x256/apps/", "644"],
    # persistent virtual-source PipeWire drop-in (issue #49)
    ["packaging/pipewire/50-honkhonk.conf", "usr/share/pipewire/pipewire.conf.d/", "644"],
]
# postrm restarts the user's PipeWire on uninstall so the now-removed drop-in
# stops being loaded (issue #49). The drop-in lives under /usr/share (vendor
# config), so it is intentionally NOT a dpkg conffile — see ADR-004.
maintainer-scripts = "packaging/deb/"

[profile.release]
lto = true
strip = true
